# HIVE

./: .env.example  .gitattributes  .gitignore  README.md  TODO.md  pyproject.toml
adapters/example/: metrics.yaml  policies.yaml  profile.md  tools.yaml
adapters/example/workflows/: lead_to_proposal.md
adapters/venture-studio/: metrics.yaml  policies.yaml  profile.md  tools.yaml
adapters/venture-studio/workflows/: market_scan.md
docs/: ARCHITECTURE.md  DESIGN_PROMPT.md  FRONTEND.md
docs/superpowers/specs/: 2026-07-08-hive-voice-design.md
src/hive/: __init__.py  adapter.py  artifacts.py  cli.py  config.py  fencing.py  runtime.py
src/hive/actions/: __init__.py  email.py  registry.py
src/hive/agents/: __init__.py  base.py  coordinator.py  maker.py  model.py  research.py
src/hive/api/: __init__.py  app.py
src/hive/evals/: __init__.py  harness.py
src/hive/events/: __init__.py  bus.py  sources.py
src/hive/governance/: __init__.py  approvals.py  delivery.py  digest.py  escalation.py
src/hive/jobs/: __init__.py  fsm.py  models.py  store.py
src/hive/memory/: __init__.py  episodic.py  procedural.py  semantic.py
src/hive/observability/: __init__.py  trace.py
tests/: conftest.py  test_actions.py  test_adapter.py  test_api.py  test_approval_safety.py  test_budgets.py  test_digest_delivery.py  test_evals.py  test_event_sources.py  test_fencing.py  test_fsm.py  test_governance_persistence.py  test_model_backends.py  test_pipeline.py  test_policy.py  test_review.py  test_send_path.py  test_store_artifacts.py  test_vault.py  test_venture_studio.py  test_voice.py
web/: agents.html  approvals.html  digest.html  hive-api.js  hive-orb.js  hive-transitions.js  hive-voice.js  index.html  memory.html  settings.html  tasks.html  workflows.html
(+10 files in other folders)
