[project]
name = "hive"
version = "0.0.1"
description = "HIVE — autonomous business operating system (P0 base)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",  # load a repo-root .env at CLI startup (see hive.cli)
]

[project.optional-dependencies]
llm = ["anthropic>=0.50"]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
# Owner-channel voice, same stack as Zenith: faster-whisper (STT) + kokoro (TTS).
# kokoro is torch-driven and (with spacy/blis) needs Python 3.11 — install this
# extra into a 3.11 venv. Models auto-download from HuggingFace on first use.
voice = [
    "faster-whisper>=1.0.0",
    "kokoro>=0.9.4",
    "torch>=2.4",
    "soundfile>=0.12",
    "numpy>=1.24",
]
dev = ["pytest>=8.0", "fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27", "numpy>=1.24"]

[project.scripts]
hive = "hive.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
